--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,9 @@ flutter:
           weight: 300
         - asset: assets/fonts/RobotoCondensed-Italic.ttf
           style: italic
+    - family: Inconsolata
+      fonts:
+        - asset: assets/fonts/Inconsolata-VariableFont_wdth,wght.ttf
         
 
   # For details regarding fonts from package dependencies,
